support optimism-java/hildr modifications